--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     compile'com.amazonaws:aws-android-sdk-polly:2.6.+'
+
+    implementation "android.arch.lifecycle:extensions:1.1.0"
+    annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
+    testImplementation "android.arch.core:core-testing:1.1.0"
+    implementation 'com.android.support:recyclerview-v7:26.1.0'
 }
