--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,5 @@ dependencies {
     annotationProcessor "android.arch.lifecycle:compiler:1.1.0"
     testImplementation "android.arch.core:core-testing:1.1.0"
     implementation 'com.android.support:recyclerview-v7:26.1.0'
+    implementation 'com.android.support:cardview-v7:26.1.0'
 }
